# DAS-Backup-Manager

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  SECURITY.md
.claude/rules/: backup.md  build.md
.github/: dependabot.yml
.github/workflows/: release-packages.yml
config/: btrbk.conf  das-backup-email.conf.example
dbus/: org.dasbackup.Helper1.conf  org.dasbackup.Helper1.service
docs/: ARCHITECTURE.md  BUTTERED-DASD.md  DAS-BAY-MAPPING.md  DEPENDENCIES.md  DISASTER-RECOVERY-GUIDE.md  INSTALL.md  OFFLINE-BACKUP-PLAN.md  STORAGE-ARCHITECTURE-AND-RECOVERY.md  btrdasd.1
docs/examples/: README.md  author-bay-mapping.md  author-storage-reference.md
docs/plans/: 2026-02-21-content-indexer.md  2026-02-21-installer-design.md  2026-02-21-installer-plan.md  2026-02-21-kde-plasma-gui-design.md  2026-02-21-kde-plasma-gui-plan.md  2026-02-24-full-management-implementation-plan.md  2026-02-24-full-management-interface-design.md  2026-03-01-gui-fix-design.md  2026-03-01-gui-fix-plan.md  2026-03-05-uninstall-all-design.md
gui/: CMakeLists.txt  org.theboscoclub.btrdasd-gui.desktop
gui/src/: backuphistory.cpp  backuphistory.h  backuppanel.cpp  backuppanel.h  btrdasd-gui.rc  configdialog.cpp  configdialog.h  database.cpp  database.h  dbusclient.cpp  dbusclient.h  filemodel.cpp  filemodel.h  healthdashboard.cpp  healthdashboard.h  indexrunner.cpp  indexrunner.h  main.cpp  mainwindow.cpp  mainwindow.h  progresspanel.cpp  progresspanel.h  restoreaction.cpp  restoreaction.h  searchmodel.cpp  searchmodel.h  settingsdialog.cpp  settingsdialog.h  setupwizard.cpp  setupwizard.h  sidebar.cpp  sidebar.h  snapshotbrowser.cpp  snapshotbrowser.h  snapshotmodel.cpp  snapshotmodel.h  snapshottimeline.cpp  snapshottimeline.h  snapshotwatcher.cpp  snapshotwatcher.h
gui/tests/: databasetest.cpp  filemodeltest.cpp  searchmodeltest.cpp  snapshotmodeltest.cpp
indexer/: Cargo.toml
indexer/completions/: README
indexer/include/: btrdasd_ffi.h
indexer/src/: backup.rs  config.rs  db.rs  ffi.rs  health.rs  indexer.rs  lib.rs  main.rs  mount.rs  progress.rs  report.rs  restore.rs  scanner.rs  schedule.rs  subvol.rs
indexer/src/setup/: config.rs  detect.rs  env_export.rs  installer.rs  mod.rs  templates.rs  wizard.rs
indexer/tests/: integration_test.rs
packaging/appimage/: btrdasd-gui.desktop  build-appimage.sh
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: das-backup-manager.spec
packaging/flatpak/: org.theboscoclub.btrdasd-gui.yml
packaging/snap/: snapcraft.yaml
polkit/: org.dasbackup.policy
scripts/: backup-run.sh  backup-verify.sh  boot-archive-cleanup.sh  das-partition-drives.sh  install-backup-timer.sh
systemd/: btrdasd-helper.service  das-backup-full.service  das-backup-full.service.in  das-backup-full.timer  das-backup.service  das-backup.service.in  das-backup.timer
