[package]
name = "buttered-dasd"
version = "0.1.0"
edition = "2024"
description = "ButteredDASD — content indexer for DAS backup snapshots with SQLite FTS5 span-based storage"
license = "MIT"

[[bin]]
name = "btrdasd"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
