[package]
name = "buttered-dasd"
version = "0.6.0"
edition = "2024"
description = "ButteredDASD — content indexer for DAS backup snapshots with SQLite FTS5 span-based storage"
license = "MIT"

[lib]
name = "buttered_dasd"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "btrdasd"
path = "src/main.rs"

[[bin]]
name = "btrdasd-helper"
path = "src/bin/btrdasd-helper.rs"
required-features = ["dbus"]

[features]
default = []
dbus = ["dep:zbus", "dep:tokio"]
ffi = []

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
walkdir = "2.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
libc = "0.2"
serde_json = "1"
zbus = { version = "5", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"], optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
